# cmput_503

./: README.md
FinalProject/: README.md
FinalProject/duckietown_final/src/control_command_executor/: CMakeLists.txt  package.xml
FinalProject/duckietown_final/src/control_command_executor/src/: control_commands.cpp
FinalProject/duckietown_final/src/lane_control/: CMakeLists.txt  package.xml
FinalProject/duckietown_final/src/lane_control/src/: lane_control.cpp
FinalProject/duckietown_final/src/lane_control_39/: CMakeLists.txt  package.xml
FinalProject/duckietown_final/src/lane_control_39/include/nn/: graphfactory.h
FinalProject/duckietown_final/src/lane_control_39/src/: lane_control.cpp
Lab1/: README.md
Lab2/april_tag_and_pid/: dependencies-py3.txt
Lab3/april_tag_and_pid/: README.md
Lab3/april_tag_and_pid/launchers/: default.sh
Lab4/: README.md  color_detector_test.py  dependencies-apt.txt  dependencies-py3.dt.txt  dependencies-py3.txt
Lab4/devel/: .catkin  .rosinstall  local_setup.sh
Lab4/devel/lib/pkgconfig/: april_tag_detection.pc  deadreckoning.pc  duckietown.pc  duckietown_demos.pc  duckietown_msgs.pc  duckietown_protocols.pc  lane_following.pc  led_emitter.pc  my_package.pc  ros_commons.pc  ros_http_api.pc
Lab4/devel/lib/python3/dist-packages/dt_ros_api/: __init__.py
Lab4/devel/lib/python3/dist-packages/duckietown_utils/: __init__.py
Lab4/devel/lib/python3/dist-packages/rgb_led/: __init__.py
Lab4/devel/share/april_tag_detection/cmake/: april_tag_detectionConfig.cmake
Lab4/devel/share/deadreckoning/cmake/: deadreckoningConfig.cmake
Lab4/devel/share/duckietown/cmake/: duckietownConfig.cmake
Lab4/devel/share/duckietown_demos/cmake/: duckietown_demosConfig.cmake
Lab4/devel/share/duckietown_msgs/cmake/: duckietown_msgs-msg-extras.cmake  duckietown_msgs-msg-paths.cmake  duckietown_msgsConfig.cmake
Lab4/devel/share/duckietown_protocols/cmake/: duckietown_protocolsConfig.cmake
Lab4/devel/share/gennodejs/ros/duckietown_msgs/msg/: DisplayFragment.js  Trajectory.js  _index.js
Lab4/devel/share/gennodejs/ros/duckietown_msgs/srv/: _index.js
Lab4/devel/share/lane_following/cmake/: lane_followingConfig.cmake
Lab4/devel/share/led_emitter/cmake/: led_emitterConfig.cmake
Lab4/devel/share/my_package/cmake/: my_packageConfig.cmake
Lab4/devel/share/ros_commons/cmake/: ros_commonsConfig.cmake
Lab4/devel/share/ros_http_api/cmake/: ros_http_apiConfig.cmake
Lab4/devel/share/roseus/ros/duckietown_msgs/: manifest.l
Lab4/duckiebot_following/: dependencies-py3.txt
Lab4/duckiebot_following/launchers/: default.sh
Lab4/launchers/: default.sh
Lab5/: README.md
Lab5/digit_classifier/devel/: .catkin  .rosinstall  local_setup.sh
Lab5/digit_classifier/src/digit_classifier/: CMakeLists.txt  package.xml
Lab5/digit_classifier/src/digit_classifier/include/nn/: architure_initializer.h  weight_optimizer.h
Lab5/digit_classifier/src/digit_classifier/include/nn/networks/: graph.h
Lab5/digit_classifier/src/digit_classifier/src/: classify.cpp  model  utils.cpp
Lab5/digit_classifier/src/digit_classifier/src/nn/: architecture_initializer.cpp  graphfactory.cpp  optimizer_factory.cpp  weight_initializer.cpp  weight_optimizer.cpp
Lab5/digit_classifier/src/digit_classifier/src/nn/networks/: graph.cpp  graph_utility_prop_implementations.cpp  vertex.cpp
Lab5/digit_classifier/src/lane_control/: CMakeLists.txt
Lab5/digit_classifier/src/lane_control/include/nn/networks/: vertex.h
Lab5/digit_classifier/src/lane_control/src/: lane_control.cpp
Lab5/mnist_classification_node_c++/devel/: setup.sh
Lab5/mnist_classification_node_c++/src/beginner_tutorials/: CMakeLists.txt  package.xml
Lab5/mnist_classification_node_c++/src/beginner_tutorials/include/nn/networks/: graph.h  vertex.h
Lab5/mnist_classification_node_c++/src/beginner_tutorials/src/: talker.cpp
Lab5/mnist_classification_node_c++/src/beginner_tutorials/src/nn/: weight_optimizer.cpp
Lab5/mnist_classification_node_c++/src/beginner_tutorials/src/nn/networks/: edge.cpp  graph.cpp  graph_utility_prop_implementations.cpp  vertex.cpp
Lab5/mnist_classification_node_c++/src/cpackage/: CMakeLists.txt  package.xml
LaneFollowing/: README.md
LaneFollowing/Part1/: README.md
color_detector_over_ROS/: README.md
